--- a/din-5008.css
+++ b/din-5008.css
@@ -1,4 +1,4 @@
-/* din-5008.css - Copyright (C) 2022 Hannes Diercks, Licensed under MIT https://github.com/Xiphe/din-5008-css 
+/* din-5008.css - Copyright (C) 2022 Hannes Diercks, Licensed under MIT https://github.com/Xiphe/din-5008-css */
  din-5008 {
    display: block;
    margin: 0;
@@ -132,4 +132,3 @@
      width: 210mm;
    }
  }
-*/
